# dscale

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
dscale/: Cargo.toml
dscale/src/: actor.rs  destination.rs  event.rs  jiffy.rs  lib.rs  message.rs  nursery.rs  process_handle.rs  random.rs  runner.rs  simulation.rs  simulation_builder.rs  simulation_flavor.rs  step.rs  topology.rs
dscale/src/actors/: mod.rs  timer_actor.rs
dscale/src/actors/network_actor/: bandwidth.rs  latency.rs  mod.rs
dscale/src/global/: access.rs  anykv.rs  clock.rs  configuration.rs  kv.rs  local_access.rs  mod.rs  shared_access.rs  tso.rs
dscale/src/helpers/: combiner.rs  debug.rs  mod.rs
dscale/src/network/: bandwidth.rs  latency.rs  mod.rs
dscale/src/process/: mod.rs
dscale/src/runners/: deterministic.rs  emojis.rs  mod.rs  progress.rs  scalable.rs  simple.rs  task.rs  threads.rs  workers.rs
dscale/src/time/: jiffy.rs  timer_manager.rs
example/src/: main.rs
examples/: Cargo.toml
examples/src/: broadcast.rs  ring.rs
matrix/: Cargo.toml
matrix/src/: access.rs  actor.rs  anykv.rs  lib.rs  progress.rs  random.rs  simulation.rs  simulation_builder.rs  topology.rs  tso.rs
matrix/src/communication/: destination.rs  matrix_message.rs  (+2 more)
protocols/dag-based/: Cargo.toml
simulator/: Cargo.toml
simulator/src/: access.rs  communication.rs  history.rs  lib.rs  metrics.rs  process.rs  progress.rs  random.rs  simulation.rs  simulation_builder.rs  simulation_handle.rs  simulation_result.rs  time.rs
systems/dag-based/: Cargo.toml
systems/pingpong/: Cargo.toml
(+62 files in other folders)
