[package]
name = "dscale"
version = "0.4.0"
edition = "2024"
authors = ["Konstantin Shprenger <konstantin@shprenger.com>"]
license = "MIT"
description = "A fast & deterministic simulation framework for testing and benchmarking distributed systems"
repository = "https://github.com/kshprenger/dscale"
homepage = "https://github.com/kshprenger/dscale"
documentation = "https://docs.rs/dscale"
readme = "../README.md"
keywords = ["simulation", "distributed-systems", "testing", "network", "deterministic"]
categories = ["simulation", "development-tools::testing", "network-programming"]



[dependencies]
crossbeam-channel = "0.5.15"
dashmap = "6.1.0"
env_logger = "0.11.8"
indicatif = "0.18.3"
smallvec = { version = "1", features = ["union"] }
log = { version = "0.4.29", features = ["release_max_level_info"] }
mimalloc = "0.1.48"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"
rustc-hash = "2.1.1"

[package.metadata.release]
tag-name = "v{{version}}"
